2006-10-10  Yao Qi  <qiyaoltc@cn.ibm.com>

	* funit-ppc64-regs.S: Add 32-bit asm code.

2006-10-09  Yao Qi  <qiyaoltc@cn.ibm.com>

	* funit-breakpoints.c (dummy): Generate trap event for
	powerpc32 as well.

2006-10-05  Mark Wielaard  <mark@klomp.org>

	* funit-breakpoints.c (trap_handler): New function.
	(dummy): Send trap signal and generate trap event.
	(main): Install trap signal handler.

2006-09-29  Mark Wielaard  <mark@klomp.org>

	* funit-breakpoints.c (main): Reexec at the end of the loop.

2006-09-25  Yong Zheng  <zhengyo@cn.ibm.com>

	* funit-ppc64-modify.S: New PPC64 specific test program.
	* funit-x8664-modify.S: Correct the syscall number on X8664 
	and do some modifications to keep synch with TestRegMemModify.
	
2006-09-25  Yong Zheng  <zhengyo@cn.ibm.com>

	* funit.java: Refactor to suport arch32 test.
	* funit.xml: Update the --arch option info.

2006-09-21	Mike Cvet	<mcvet@redhat.com>
	
	* funit-rt-threader.c (signal_parent): loops instead of 
	exiting.

2006-09-20	Mike Cvet	<mcvet@redhat.com>
	
	* funit-rt-looper.c: Threw in a little entropy.
	* funit-rt-threader.c: Added - will be used for threaded
	stack trace tests.

2006-09-18  Mark Wielaard  <mark@klomp.org>

	* funit-syscall-running.c: Don't read, just accept socket.

2006-09-07  Mark Wielaard  <mark@klomp.org>

	* funit-syscall-signal.c: New test prog.

2006-09-04  Mark Wielaard  <mark@klomp.org>

	* funit-syscall-running.c: Accept socket and read() for it.

2006-09-01  Mark Wielaard  <mark@klomp.org>

	* funit-syscall-running.c: New test prog.

2006-08-29  Yong Zheng  <zhengyo@cn.ibm.com>

	* funit-ppc64-regs.S: New PPC64 specific program.

2006-08-23  Yong Zheng  <zhengyo@cn.ibm.com>

	* funit-breakpoint.c (main): Get the function address 
	instead of address of function descriptor on PPC64.

2006-08-16  Tim Moore  <timoore@redhat.com>

	* funit-x8664-regs.s: Use some more interesting 64 bit values to
	stress the long and BigInteger Register APIs.
	* funit-x8664-modify.s: ditto.
